syntax = "proto3";

import "bk-bscp/internal/protocol/common/common.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

package sidecar;

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
        title: "蓝鲸服务配置平台Sidecar Instance API说明文档"
        version : "0.0.1"
    };

    schemes: HTTP
    consumes: "application/json"
    produces: "application/json"
};

service Instance {
    rpc Ping(PingReq) returns (PingResp) {
        option (google.api.http) = {
          post: "/v1/instance/ping"
          body: "*"
        };
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "获取sidecar实例信息"
            summary: "获取sidecar实例信息"
        };
    }
    rpc Inject(InjectReq) returns (InjectResp) {
        option (google.api.http) = {
          post: "/v1/instance/inject"
          body: "*"
        };
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "注入实例标签信息"
            summary: "注入实例标签"
        };
    }
    rpc WatchReload(WatchReloadReq) returns (stream WatchReloadResp) {
        option (google.api.http) = {
          post: "/v1/instance/watch-reload"
          body: "*"
        };
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "订阅reload事件"
            summary: "订阅reload事件"
        };
    }
    rpc ReportReload(ReportReloadReq) returns (ReportReloadResp) {
        option (google.api.http) = {
          post: "/v1/instance/report-reload"
          body: "*"
        };
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "上报Reload信息"
            summary: "上报Reload信息"
        };
    }
}

message ModInfo {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "ModInfo"
			description: "Sidecar实例中承载处理的应用模块信息"
		}
	};

    string              businessName = 1 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "所属业务名称", description: "", max_length: 64}];
    string              appName      = 2 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "所属应用名称", description: "", max_length: 64}];
    string              clusterName  = 3 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "所属集群名称", description: "", max_length: 64}];
    string              zoneName     = 4 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "所属大区名称", description: "", max_length: 64}];
    string              dc           = 5 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "物理机房标识", description: "", max_length: 64}];
    string              IP           = 6 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "IP", description: "", max_length: 32}];
    map<string, string> labels       = 7 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "应用实例labels", description: "", max_length: 1024}];
    string              path         = 8 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "应用在sidecar的配置缓存路径", description: "", max_length: 128}];
    bool                isReady      = 9 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "该App模块是否已就绪", description: "在通常情况下，需要业务方完成注入后App才会就绪拉取配置内容，业务方需要保证注入完成使得状态为true"}];
}

message ConfigsMetadata {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "ConfigsMetadata"
			description: "需要reload的配置信息描述"
		}
	};

    string name  = 1 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "配置名称", description: "", max_length: 64}];
    string fpath = 2 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "配置子路径", description: "", max_length: 1024}];
}


message PingReq {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "PingReq"
			description: "Ping请求"
			required: ["seq"]
		}
        example: { value: '{ "seq": "1"}' }
	};

    uint64 seq = 1 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "请求序列号", description: "调用方的请求序列号，用于指定时间内标识某次请求"}];
}

message PingResp {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "PingResp"
			description: "Ping响应"
			required: ["seq", "errCode", "errMsg"]
		}
        example: { value: '{ "seq": "1", "errCode": 0, "errMsg": "OK", "mods": [{"businessName": "business", "appName": "app", "clusterName": "cluster", "zone": "zone","dc": "dc01", "IP": "127.0.0.1", "labels": {"k1": "v1", "k2": "v2"}, "path": "/data/bk-bscp/"}]}' }
	};

    uint64           seq     = 1 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "响应序列号", description: "响应序列号, 与调用方的请求序列号一致，用于指定时间内标识某次请求"}];
    common.ErrCode   errCode = 2 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "错误码", description: ""}];
    string           errMsg  = 3 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "错误描述", description: ""}];
    repeated ModInfo mods    = 4 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "实例信息", description: "成功后返回实例信息(单Sidecar可以承载处理多个App)"}];
}

message InjectReq {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "InjectReq"
			description: "实例标签信息注入请求"
			required: ["seq", "businessName", "appName", "path", "labels"]
		}
        example: { value: '{ "seq": "1", "businessName": "business", "appName": "app", "labels": {"k1": "v1", "k2": "v2"}}' }
	};

    uint64              seq          = 1 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "请求序列号", description: "调用方的请求序列号，用于指定时间内标识某次请求"}];
    string              businessName = 2 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "业务名称", description: "", max_length: 64}];
    string              appName      = 3 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "应用名称", description: "", max_length: 64}];
    string              path         = 4 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "应用在sidecar的配置缓存路径", description: "", max_length: 128}];
    map<string, string> labels       = 5 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "期望注入的实例标签集合", description: "JSON序列化总长度限制为1024"}];
}

message InjectResp {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "InjectResp"
			description: "实例标签信息注入响应"
			required: ["seq", "errCode", "errMsg"]
		}
        example: { value: '{ "seq": "1", "errCode": 0, "errMsg": "OK"}' }
	};

    uint64         seq     = 1 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "响应序列号", description: "响应序列号, 与调用方的请求序列号一致，用于指定时间内标识某次请求"}];
    common.ErrCode errCode = 2 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "错误码", description: ""}];
    string         errMsg  = 3 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "错误描述", description: ""}];
}

message WatchReloadReq {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "WatchReloadReq"
			description: "订阅Reload事件请求"
			required: ["seq", "businessName", "appName", "path"]
		}
        example: { value: '{ "seq": "1", "businessName": "business", "appName": "app"}' }
	};

    uint64 seq          = 1 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "请求序列号", description: "调用方的请求序列号，用于指定时间内标识某次请求"}];
    string businessName = 2 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "业务名称", description: "", max_length: 64}];
    string appName      = 3 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "应用名称", description: "", max_length: 64}];
    string path         = 4 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "应用在sidecar的配置缓存路径", description: "", max_length: 128}];
}

message WatchReloadResp {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "WatchReloadResp"
			description: "订阅Reload事件流式响应"
			required: ["seq", "errCode", "errMsg"]
		}
        example: { value: '{ "seq": "1", "errCode": 0, "errMsg": "OK", "releaseid": "f879ab8f-c7e5-11e9-9dc5-525400f99278", "multiReleaseid": "f879a282-c7e5-11e9-9dc5-525400f99278", "releaseName":"new release", "reloadType": 0, "rootPath": "/data/bk-bscp", "metadatas": [{"Name":"server.yaml", "Fpath":"/etc"}]}' }
	};

    uint64                   seq            = 1 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "响应序列号", description: "响应序列号, 与调用方的请求序列号一致，用于指定时间内标识某次请求"}];
    common.ErrCode           errCode        = 2 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "错误码", description: ""}];
    string                   errMsg         = 3 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "错误描述", description: ""}];
    string                   releaseid      = 4 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "新发布版本ID", description: "releaseid和multiReleaseid互斥存在，通常差量reload机制下只存在multiReleaseid", max_length: 64}];
    string                   multiReleaseid = 5 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "新发布版本ID(组模式)", description: "releaseid和multiReleaseid互斥存在，通常差量reload机制下只存在multiReleaseid", max_length: 64}];
    string                   releaseName    = 6 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "新发布版本名称", description: "", max_length: 64}];
    int32                    reloadType     = 7 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "reload类型", description: "0：发布更新  1：回滚  主要是用于描述事件背景"}];
    string                   rootPath       = 8 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "缓存根目录", description: "只是sidecar容器内的缓存路径，通过volums后在业务容器中位置并不一定相同"}];
    repeated ConfigsMetadata metadatas      = 9 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "需要做reload的配置信息", description: "根据该信息到业务容器侧的volums目录中拿取指定配置数据做更新"}];
}

message ReportReloadReq {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "ReportReloadReq"
			description: "Reload执行上报请求"
			required: ["seq", "businessName", "appName", "path", "reloadTime", "reloadCode" "reloadMsg"]
		}
        example: { value: '{ "seq": "1", "businessName": "business", "appName": "app", "releaseid": "f879ab8f-c7e5-11e9-9dc5-525400f99278", "multiReleaseid": "0b67a798-e9c1-11e9-8c23-525400f99278", "reloadTime": "2019-08-29 17:18:22", "reloadCode": 0, "reloadMsg":"SUCCESS"}' }
	};

    uint64 seq            = 1 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "请求序列号", description: "调用方的请求序列号，用于指定时间内标识某次请求"}];
    string businessName   = 2 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "业务名称", description: "", max_length: 64}];
    string appName        = 3 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "应用名称", description: "", max_length: 64}];
    string path           = 4 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "应用在sidecar的配置缓存路径", description: "", max_length: 128}];
    string releaseid      = 5 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "已执行生效的发布版本ID", description: "releaseid和multiReleaseid互斥存在，通常差量reload机制下只存在multiReleaseid", max_length: 64}];
    string multiReleaseid = 6 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "已执行生效的发布版本ID(组模式)", description: "releaseid和multiReleaseid互斥存在，通常差量reload机制下只存在multiReleaseid", max_length: 64}];
    string reloadTime     = 7 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "版本Reload时间", description: "版本reload时间, 2019-08-29 17:18:22"}];
    int32  reloadCode     = 8 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "Reload执行错误码", description: ""}];
    string reloadMsg      = 9 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "Reload执行错误信息", description: ""}];
}

message ReportReloadResp {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "ReportReloadResp"
			description: "Reload执行上报响应"
			required: ["seq", "errCode", "errMsg"]
		}
        example: { value: '{ "seq": "1", "errCode": 0, "errMsg": "OK"}' }
	};

    uint64         seq     = 1 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "响应序列号", description: "响应序列号, 与调用方的请求序列号一致，用于指定时间内标识某次请求"}];
    common.ErrCode errCode = 2 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "错误码", description: ""}];
    string         errMsg  = 3 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {title: "错误描述", description: ""}];
}
